# edgeops-ai-service

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/edgeops_ai/: collector_client.py  features.py  main.py  model_loader.py  prediction_backends.py  predictor.py  schemas.py  settings.py
tests/: test_api.py  test_model_loader.py  test_prediction_backends.py
