[project]
name = "edgeops-ai-service"
version = "0.1.0"
description = "Anomaly Detection Service for EdgeOps"
dependencies = ["fastapi", "uvicorn"]

[dependency-groups]
dev = ["httpx2", "pytest", "ruff"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edgeops_ai_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
