[project]
name = "edgeops-ai-service"
version = "0.1.0"
description = "Anomaly Detection Service for EdgeOps"
dependencies = ["fastapi", "uvicorn", "pydantic", "pydantic-settings", "httpx2"]

[dependency-groups]
dev = ["pytest", "ruff"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgeops_ai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
